@@ -8,16 +8,6 @@
          },
          {
             "relation" : "dependsOn",
-            "source" : "pipeline_start",
-            "target" : "create_empty_fastq"
-         },
-         {
-            "relation" : "dependsOn",
-            "source" : "create_empty_fastq",
-            "target" : "lane_analysis_in_progress"
-         },
-         {
-            "relation" : "dependsOn",
             "source" : "create_summary_link_analysis",
             "target" : "lane_analysis_in_progress"
          },
@@ -271,10 +261,6 @@
          {
             "id" : "pipeline_start",
             "label" : "pipeline_start"
-         },
-         {
-            "id" : "create_empty_fastq",
-            "label" : "create_empty_fastq"
          },
          {
             "id" : "create_summary_link_analysis",
